--- a/index.html
+++ b/index.html
@@ -4,7 +4,26 @@
         <meta charset="UTF-8!" />
     </head>
     <body>
-        <h1>RUN BUDDY</h1>
+        <h1><a href="/">RUN BUDDY</a></h1>
+        <nav>
+            <!-- Unordered list element -->
+<ul>
+    <!-- List item element-->
+    <li>
+      <!-- Anchor element -->
+      <a href="#what-we-do">What We Do</a>
+    </li>
+    <li>
+      <a href="#what-you-do">What You Do</a>
+    </li>
+    <li>
+      <a href="#your-trainers">Your Trainers</a>
+    </li>
+    <li>
+      <a href="#reach-out">Reach Out</a>
+    </li>
+  </ul>
+        </nav>
         What We Do What You Do Your Trainers Reach Out
         🏃
     <!-- hero/jumbotron -->
