--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="./assets/css/style.css"  />
         <meta charset="UTF-8!" />
     </head>
     <body>
-        <h1><a href="/">RUN BUDDY</a></h1>
+        <header>
+            <h1><a href="/"></a>RUN BUDDY</a></h1>
         <nav>
             <!-- Unordered list element -->
 <ul>
@@ -24,6 +26,47 @@
     </li>
   </ul>
         </nav>
+    </header>
+        <style>
+            * {
+  margin: 0;
+  padding: 0;
+}
+           body {
+  /* more on this crazy alphanumerical value in a minute! */
+  color: #39a6b2;
+  font-family: Helvetica, Arial, sans-serif;
+} 
+/* apply styles to <header> */
+    header {
+  padding: 20px 35px;
+  background-color: #39a6b2;
+}
+header h1 {
+  font-weight: bold;
+  font-size: 36px;
+  color: #fce138;
+  margin: 0;
+  display: inline;
+}
+header a {
+  text-decoration: none;
+  color: #fce138;
+}
+header nav {
+  float: right;
+  margin: 7px 0;
+}
+header nav ul li {
+  display: inline;
+}
+header nav ul li a {
+  margin: 0 30px;
+  font-weight: lighter;
+  font-size: 22px;
+}
+        </style>
+        
         What We Do What You Do Your Trainers Reach Out
         🏃
     <!-- hero/jumbotron -->
