--- a/index.html
+++ b/index.html
@@ -65,6 +65,30 @@ header nav ul li a {
   font-weight: lighter;
   font-size: 22px;
 }
+footer {
+  background: #fce138;
+  width: 100%;
+  padding: 40px 35px;
+}
+footer h2 {
+  display: inline;
+  color: #024e76;
+  font-size: 30px;
+  margin: 0;
+}
+footer div {
+  float: right;
+  line-height: 1.5;
+  text-align: right;
+}
+footer a {
+  color: #024e76;
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
         </style>
         
         What We Do What You Do Your Trainers Reach Out
@@ -96,6 +120,10 @@ header nav ul li a {
 <!-- footer -->
 <footer>
   <h2>❤️ Made with love by Run Buddy.</h2>
+  <div>
+    <a href="#">Read Our Privacy Policy</a><br />
+    &copy; 2019 Run Buddy, Inc.
+  </div>
 </footer>
     </body>
 </html>
