--- a/index.html
+++ b/index.html
@@ -89,20 +89,83 @@ footer a {
   padding: 0;
   box-sizing: border-box;
 }
+section {
+  padding: 60px;
+}
+/* Hero Style Start */
+.hero {
+  background-image: url("../assets/images/hero-bg.jpg");
+  height: 600px;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+.hero-form {
+  background-color: #fce138;
+  padding: 20px;
+  width: 500px;
+  color: #024e76;
+}
+.hero-form {
+  ...
+  border-style: solid;
+  border-width: 3px;
+  border-color: #024e76;
+}
+.hero-form {
+  ...
+  border: solid 3px #024e76;
+  background-color: #fce138;
+  padding: 20px;
+  width: 500px;
+  color: #024e76;
+  position: absolute;
+  bottom: 120px;
+  right: 140px;
+}
+.hero-form h3 {
+  font-size: 24px;
+  margin: 0;
+}
+
+.hero-form p {
+  margin: 5px 0 15px 0;
+}
+
+.form-input {
+  border: 1px solid #024e76;
+  display: block;
+  padding: 7px 15px;
+  font-size: 16px;
+  color: #024e76;
+  width: 100%;
+  margin-bottom: 15px;
+}
+.hero-form label {
+  margin: 0 5px;
+}
+.hero-form button {
+  color: #fce138;
+  background-color: #024e76;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+}
+/* Hero Style End */
         </style>
         
-        <section>
-            <div>
+        <section class="hero">
+            <div class="hero-form">
               <h3>Get Started Today</h3>
               <p>Fill out this form and one of our trainers will schedule a consult</p>
     <!-- Add form element -->
     <form>
         <label for="name">Enter full name:</label>
-        <input type="text" placeholder="Your Name" name="name" id="name" />
+        <input type="text" placeholder="Your Name" name="name" id="name" class="form-input" />
         <label for="email">Enter email address:</label>
-        <input type="email" placeholder="Email Address" name="email" id="email" />
+        <input type="email" placeholder="Email Address" name="email" id="email" class="form-input" />
         <label for="phone">Enter a telephone number:</label>
-        <input type="tel" placeholder="Phone Number" name="phone" id="phone"/>
+        <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input"/>
         <p>
             Have you worked out with a trainer before?
             <input type="radio" name="trainer-confirm" id="trainer-yes" />
