--- a/index.html
+++ b/index.html
@@ -235,6 +235,48 @@ section {
   padding: 10px 20px;
   font-size: 16px;
 }
+.trainers {
+  text-align: center;
+}
+.trainer {
+  width: 900px;
+  margin: 0 auto 30px auto;
+  background: #024e76;
+  color: #fce138;
+  overflow: auto;
+}
+.trainer img {
+  width: 35%;
+  float: left;
+}
+
+.trainer-bio {
+  padding: 35px;
+  float: left;
+  width: 65%;
+}
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+.trainer-bio h3 {
+  font-size: 32px;
+  margin-bottom: 8px;
+}
+
+.trainer-bio h4 {
+  font-weight: lighter;
+  font-size: 26px;
+  margin-bottom: 25px;
+}
+
+.trainer-bio p {
+  font-size: 17px;
+  line-height: 1.3;
+}
 /* Hero Style End */
         </style>
         
@@ -314,8 +356,44 @@ section {
 </section>
 
 <!-- "meet the trainers" section -->
-<section>
-  <h2>Meet The Trainers</h2>
+<section id="your-trainers" class=:"trainers">
+  <h2 class="section-title primary-border">Meet The Trainers</h2>
+  <article class="trainer">
+    <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+    <div class="trainer-bio text-left">
+      <h3>Arron Stephens</h3>
+      <h4>Speed / Strength</h4>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+      </p>   
+    </div>
+  </article>
+  <!-- second trainer bio -->
+<article class="trainer">
+  <div class="trainer-bio text-right">
+    <h3>Joanna Gill</h3>
+    <h4>Endurance</h4>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+      itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+    </p>
+  </div>
+  <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+</article>
+
+<!-- third trainer bio -->
+<article class="trainer">
+  <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+  <div class="trainer-bio text-left">
+    <h3>Harry "the Headband" Smith</h3>
+    <h4>Strength</h4>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+      itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+    </p>
+  </div>
+</article>
 </section>
 
 <!-- "reach out" section -->
