--- a/index.html
+++ b/index.html
@@ -277,6 +277,59 @@ section {
   font-size: 17px;
   line-height: 1.3;
 }
+
+.section-title {
+  font-size: 55px;
+  display: inline-block;
+  padding: 0 100px 20px 100px;
+  border-bottom: 3px solid;
+  margin-bottom: 35px;
+  color: #024e76;
+}
+
+/* REACH OUT STYLES START */
+.contact {
+  text-align: center;
+  background: #024e76;
+}
+
+.contact h2 {
+  color: #fce138;
+}
+
+.contact-info iframe {
+  width: 400px;
+  height: 400px;
+}
+
+
+.contact-info div {
+  width: 410px;
+  display: inline-block;
+  vertical-align: top;
+  text-align: left;
+  margin: 30px 0 0 60px;
+  color: white;
+}
+
+.contact-info h3 {
+  color: #fce138;
+  font-size: 32px;
+}
+
+.contact-info p, .contact-info address {
+  margin: 20px 0;
+  line-height: 1.5;
+  font-size: 20px;
+  font-style: normal;
+}
+
+.contact-info a {
+  color: #fce138;
+}
+
+/* REACH OUT STYLES END */
+
 /* Hero Style End */
         </style>
         
@@ -397,8 +450,26 @@ section {
 </section>
 
 <!-- "reach out" section -->
-<section>
-  <h2>Reach Out</h2>
+<section id="reach-out" class="contact">
+  <h2 class="section-title secondary-border">Reach Out</h2>
+  <div class="contact-info">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12632.339723356125!2d-121.78880250985134!3d37.670712078038406!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fe791cf640645%3A0xfe056271667ddb77!2s1017%20Aberdeen%20Ave%2C%20Livermore%2C%20CA%2094550!5e0!3m2!1sen!2sus!4v1590196241223!5m2!1sen!2sus" width="400" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+  </div>
+  <div>
+    <h3>Run Buddy</h3>
+    <p>
+      Any questions or concerns before signing up?
+      <br />
+      Let us know and we'll be happy to talk to you!
+    </p>
+    <address>
+      55 Main Street <br/>
+      Some Town, Ca <br/>
+      12345<br />
+      P: 555.RUN.BUDZ (555.786.2839)<br/>
+      E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+    </address>
+  </div>
 </section>
 
 <!-- footer -->
