--- a/index.html
+++ b/index.html
@@ -466,6 +466,18 @@ section {
   <h2 class="section-title secondary-border">Reach Out</h2>
   <div class="contact-info">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12632.339723356125!2d-121.78880250985134!3d37.670712078038406!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fe791cf640645%3A0xfe056271667ddb77!2s1017%20Aberdeen%20Ave%2C%20Livermore%2C%20CA%2094550!5e0!3m2!1sen!2sus!4v1590196241223!5m2!1sen!2sus" width="400" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    <div class="contact-form">
+      <h3>Contact Us</h3>
+      <form>
+        <label for="contact-name">Your Name</label>
+        <input type="text" id="contact-name" placeholder="Your Name" />
+    
+        <label for="contact-message">Message</label>
+        <textarea id="contact-message" placeholder="Message"></textarea>
+    
+        <button type="submit">Submit</button>
+      </form>
+    </div>
   </div>
   <div>
     <h3>Run Buddy</h3>
@@ -482,6 +494,8 @@ section {
       E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
     </address>
   </div>
+
+  
 </section>
 
 <!-- footer -->
