--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 } 
 /* apply styles to <header> */
     header {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
   padding: 20px 35px;
   background-color: #39a6b2;
 }
@@ -47,14 +50,12 @@ header h1 {
   font-size: 36px;
   color: #fce138;
   margin: 0;
-  display: inline;
 }
 header a {
   text-decoration: none;
   color: #fce138;
 }
 header nav {
-  float: right;
   margin: 7px 0;
 }
 header nav ul li {
