--- a/index.html
+++ b/index.html
@@ -71,18 +71,19 @@ header nav ul li a {
   font-size: 1.55vw;
 }
 footer {
+  display: flex;
   background: #fce138;
   width: 100%;
   padding: 40px 35px;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
-footer h2 {
-  display: inline;
+footer h2 { 
   color: #024e76;
   font-size: 30px;
   margin: 0;
 }
 footer div {
-  float: right;
   line-height: 1.5;
   text-align: right;
 }
@@ -184,16 +185,34 @@ section {
 /* Hero Style Start */
 .hero {
   background-image: url("../assets/images/hero-bg.jpg");
-  height: 600px;
   background-size: cover;
   background-position: center;
-  position: relative;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
+
+.hero-cta {
+  width: 35%;
+  text-align: right;
+  margin: 3.5%;
+  color: #fff;
+  font-size: 18px;
+  line-height: 1.3;
+}
+
+.hero-cta h2 {
+  font-style: italic;
+  font-size: 55px;
+  color: #fce138;
+}
+
 .hero-form {
   background-color: #fce138;
   padding: 20px;
-  width: 500px;
   color: #024e76;
+  width: 40%;
+  margin: 3.5%;
 }
 .hero-form {
   ...
@@ -206,11 +225,7 @@ section {
   border: solid 3px #024e76;
   background-color: #fce138;
   padding: 20px;
-  width: 500px;
   color: #024e76;
-  position: absolute;
-  bottom: 120px;
-  right: 140px;
 }
 .hero-form h3 {
   font-size: 24px;
