--- a/index.html
+++ b/index.html
@@ -284,24 +284,26 @@ section {
   font-size: 16px;
 }
 .trainers {
-
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
+
 .trainer {
-  width: 900px;
-  margin: 0 auto 30px auto;
+  margin: 20px;
   background: #024e76;
   color: #fce138;
-  overflow: auto;
+  flex: 1;
 }
 .trainer img {
-  width: 35%;
-  float: left;
+  width: 100%;
 }
 
 .trainer-bio {
-  padding: 35px;
-  float: left;
-  width: 65%;
+  padding: 25px;
+  line-height: 1.3;
 }
 .text-left {
   text-align: left;
@@ -311,19 +313,17 @@ section {
   text-align: right;
 }
 .trainer-bio h3 {
-  font-size: 32px;
-  margin-bottom: 8px;
+  font-size: 28px;
 }
 
 .trainer-bio h4 {
   font-weight: lighter;
-  font-size: 26px;
-  margin-bottom: 25px;
+  font-size: 22px;
+  margin-bottom: 15px;
 }
 
 .trainer-bio p {
   font-size: 17px;
-  line-height: 1.3;
 }
 
 .section-title {
@@ -506,15 +506,15 @@ section {
 
 
 <!-- "meet the trainers" section -->
-<section id="your-trainers" class=:"trainers">
+<section id="your-trainers">
   <div class="flex-row"></div>
   <h2 class="section-title primary-border">Meet The Trainers</h2>
 </div>
   <article class="trainer">
     <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-    <div class="trainer-bio text-left">
-      <h3>Arron Stephens</h3>
-      <h4>Speed / Strength</h4>
+    <div class="trainer-bio" class="trainers">
+      <h3 class="trainer-name">Arron Stephens</h3>
+      <h4 class="trainer-role">Speed / Strength</h4>
       <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
         itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
@@ -523,9 +523,9 @@ section {
   </article>
   <!-- second trainer bio -->
 <article class="trainer">
-  <div class="trainer-bio text-right">
-    <h3>Joanna Gill</h3>
-    <h4>Endurance</h4>
+  <div class="trainer-bio" class="trainers">
+    <h3 class="trainer-name">Joanna Gill</h3>
+    <h4 class="trainer-role">Endurance</h4>
     <p>
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
       itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
@@ -537,15 +537,17 @@ section {
 <!-- third trainer bio -->
 <article class="trainer">
   <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-  <div class="trainer-bio text-left">
-    <h3>Harry "the Headband" Smith</h3>
-    <h4>Strength</h4>
+  <div class="trainer-bio" class="trainers">
+    <h3 class="trainer-name">Harry "the Headband" Smith</h3>
+    <h4 class="trainer-role">Strength</h4>
     <p>
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
       itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
     </p>
   </div>
 </article>
+
+
 </section>
 
 <!-- "reach out" section -->
