--- a/index.html
+++ b/index.html
@@ -510,9 +510,11 @@ section {
   <div class="flex-row"></div>
   <h2 class="section-title primary-border">Meet The Trainers</h2>
 </div>
+
+<div class="trainers">
   <article class="trainer">
     <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-    <div class="trainer-bio" class="trainers">
+    <div class="trainer-bio">
       <h3 class="trainer-name">Arron Stephens</h3>
       <h4 class="trainer-role">Speed / Strength</h4>
       <p>
@@ -523,7 +525,8 @@ section {
   </article>
   <!-- second trainer bio -->
 <article class="trainer">
-  <div class="trainer-bio" class="trainers">
+  <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+  <div class="trainer-bio">
     <h3 class="trainer-name">Joanna Gill</h3>
     <h4 class="trainer-role">Endurance</h4>
     <p>
@@ -531,13 +534,12 @@ section {
       itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
     </p>
   </div>
-  <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
 </article>
 
 <!-- third trainer bio -->
 <article class="trainer">
   <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-  <div class="trainer-bio" class="trainers">
+  <div class="trainer-bio">
     <h3 class="trainer-name">Harry "the Headband" Smith</h3>
     <h4 class="trainer-role">Strength</h4>
     <p>
@@ -547,6 +549,7 @@ section {
   </div>
 </article>
 
+</div>
 
 </section>
 
