--- a/Module1/privacy-policy.html
+++ b/Module1/privacy-policy.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
     <title>Privacy Policy - Run Buddy</title>
     <!-- Do this to all of the <a> elements in privacy-policy.html -->
