added grid example

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <nav>
             <!-- Unordered list element -->
 <ul>
+    <li>
+      <a href="#service-plans">Service Plans</a>
+    </li>
     <!-- List item element-->
     <li>
       <!-- Anchor element -->
@@ -521,6 +524,18 @@ section {
 
 }
 
+.service-grid-container {
+  display: grid;
+}
+
+.service-grid-item {
+  width: 200px;
+  height: 50px;
+  background-color: orange;
+  border: solid;
+  color: black;
+}
+
         </style>
         
         <section class="hero">
@@ -692,6 +707,19 @@ section {
 </div>
 
 </section>
+
+<section id="service-plans" class="services">
+  <div class="service-grid-container">
+    <div class="service-grid-item">One</div>
+    <div class="service-grid-item">Two</div>
+    <div class="service-grid-item">Three</div>
+    <div class="service-grid-item">Four</div>
+    <div class="service-grid-item">Five</div>
+    <div class="service-grid-item">Six</div>
+  </div>
+</section>
+
+
 
 <!-- "reach out" section -->
 <section id="reach-out" class="contact">
