--- a/index.html
+++ b/index.html
@@ -525,15 +525,38 @@ section {
 }
 
 .service-grid-container {
+  max-width: 940px;
+  margin: 0 auto;
   display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 100px);
+  grid-gap: 10px;
 }
 
 .service-grid-item {
-  width: 200px;
-  height: 50px;
   background-color: orange;
   border: solid;
+  padding: 1em;
   color: black;
+}
+
+.box1 {
+  grid-column: 1/2; 
+  grid-row: 1/3; 
+}
+
+.box2 {
+  grid-column: 3/4; 
+  grid-row: 1/-1; 
+}
+
+.box3 {
+  grid-column: 2/ span 2; 
+  grid-row: 3/ span 1; 
+}
+
+.grid-container {
+  place-items: <align-items>  <justify-items>;
 }
 
         </style>
@@ -710,12 +733,12 @@ section {
 
 <section id="service-plans" class="services">
   <div class="service-grid-container">
-    <div class="service-grid-item">One</div>
-    <div class="service-grid-item">Two</div>
-    <div class="service-grid-item">Three</div>
-    <div class="service-grid-item">Four</div>
-    <div class="service-grid-item">Five</div>
-    <div class="service-grid-item">Six</div>
+    <div class="service-grid-item box1">One</div>
+    <div class="service-grid-item box2">Two</div>
+    <div class="service-grid-item box3">Three</div>
+    <div class="service-grid-item box4">Four</div>
+    <div class="service-grid-item box5">Five</div>
+    <div class="service-grid-item box6">Six</div>
   </div>
 </section>
 
