--- a/index.html
+++ b/index.html
@@ -463,30 +463,24 @@ section {
 
 /* MEDIA QUERY FOR TABLETS AND SMALLER */
 @media screen and (max-width: 768px) {
-  section {
-    padding: 30px 15px;
+
+  .service-grid-container {
+    grid-template-columns: 1fr 1fr;
   }
 
-  .step h3 {
-    flex: 1 100%;
-    text-align: center;
+  .service-grid-item.basic {
+    grid-column: 1;
   }
 
-  .step-info {
-    flex: 2 100%;
-    text-align: center;
-    justify-content: center;
+  .service-grid-item.both {
+    grid-column: 1 / -1;
   }
 
-  .step-img {
-    flex: 0 32%;
-    margin-right: 0;
-    margin-top: 15px;
-    margin-bottom: 15px;
-  }
-
-  .step-text {
-    flex: 100%;  
+  .service-grid-item.cancel {
+    transform: none;
+    writing-mode: unset;
+    grid-column: 1 / -1;
+    grid-row: -1;
   }
 
 }
@@ -525,38 +519,76 @@ section {
 }
 
 .service-grid-container {
-  max-width: 940px;
-  margin: 0 auto;
+
+  background: lightyellow;
+  width: 80%;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 100px);
-  grid-gap: 10px;
+  /* repeat(iterator, size) */
+  grid-template-columns: 1fr repeat(2, 4fr);
+  grid-template-rows: repeat(5, 1fr) 2fr;
+  border: 2px solid #024e76;
+  color:  #024e76;
+  font-size: 1.2rem;
+
 }
 
 .service-grid-item {
-  background-color: orange;
-  border: solid;
-  padding: 1em;
-  color: black;
+
+  padding: 15px 0;
+  border: 2px solid #024e76;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+
 }
 
 .box1 {
-  grid-column: 1/2; 
-  grid-row: 1/3; 
+ 
 }
 
 .box2 {
-  grid-column: 3/4; 
-  grid-row: 1/-1; 
+
 }
 
 .box3 {
-  grid-column: 2/ span 2; 
-  grid-row: 3/ span 1; 
+ 
 }
 
 .grid-container {
   place-items: <align-items>  <justify-items>;
+}
+
+/* SERVICE STYLES BEGIN */
+.services {
+  background: #fce138; 
+}
+
+.service-grid-wrapper {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+/* specific match */
+.service-grid-item.basic {
+  grid-column: 2 / span 1;
+}
+
+.service-grid-item.both {
+  grid-column: 2 / span 2;
+}
+
+.service-grid-item.cancel {
+  writing-mode: vertical-lr;
+  grid-column: 1;
+  grid-row: 1 / -1;
+  transform: rotate(180deg)
+}
+
+.grid-head, .grid-price, .service-grid-item.cancel {
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
         </style>
@@ -732,14 +764,65 @@ section {
 </section>
 
 <section id="service-plans" class="services">
-  <div class="service-grid-container">
-    <div class="service-grid-item box1">One</div>
-    <div class="service-grid-item box2">Two</div>
-    <div class="service-grid-item box3">Three</div>
-    <div class="service-grid-item box4">Four</div>
-    <div class="service-grid-item box5">Five</div>
-    <div class="service-grid-item box6">Six</div>
-  </div>
+
+  <h2 class="section-title secondary-border">
+    Our Service Plans
+  </h2>
+
+  <div class="service-grid-wrapper">
+    <div class="service-grid-container">
+  
+    </div> <!-- div service-grid-container -->
+  </div> <!-- div service-grid-wrapper -->
+
+  <!-- Headers -->
+<div class="service-grid-item grid-head basic">
+  Basic
+</div>
+<div class="service-grid-item grid-head premium">
+  Premium
+</div>
+<!-- Body -->
+<div class="service-grid-item basic">
+  Support Offered Between 9-5
+</div>
+
+<div class="service-grid-item premium">
+  24/7 Plan Support
+</div>
+
+<div class="service-grid-item basic">
+  Bi-Weekly Trainer Calls
+</div>
+
+<div class="service-grid-item premium">
+  Weekly Trainer Calls
+</div>
+
+<div class="service-grid-item basic">
+  N/A
+</div>
+
+<div class="service-grid-item premium">
+  Discounts At Select Running Stores
+</div>
+
+<div class="service-grid-item both">
+  Subscription to Run Buddy's Health Magazine!
+</div>
+
+<div class="service-grid-item grid-price basic">
+  $10/mo
+</div>
+
+<div class="service-grid-item grid-price premium">
+  $25/mo
+</div>
+
+<div class="service-grid-item cancel">
+  Cancel At Any Time!
+</div>
+
 </section>
 
 
