--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
         </nav>
     </header>
         <style>
+
+:root {
+  --primary-color: #fce138;
+  --secondary-color: #024e76;
+  --tertiary-color: #39a6b2;
+}
             * {
   margin: 0;
   padding: 0;
@@ -55,6 +61,7 @@
   background-position: center;
   background-attachment: fixed;
   background-position: 80%;
+  z-index: 9999;
 }
 header h1 {
   font-weight: bold;
@@ -705,6 +712,70 @@ header nav ul li a:hover {
   border-bottom: 1px solid #39a6b2;
 }
 
+.checkbox-wrapper input, .radio-wrapper input {
+  opacity: 0;
+}
+
+.checkbox-wrapper label, .radio-wrapper label {
+    position: relative;
+    left: 10px;
+    margin: 10px;
+    line-height: 1.6;
+}
+
+.checkbox-wrapper label::before, .radio-wrapper label::before {
+    content: "";
+    height: 20px;
+    width: 20px;
+    background: rgba(255, 255, 255, 0.75);  
+    border: 1px solid #024e76;  
+    position: absolute;
+    top: -4px;
+    left: -30px;
+}
+
+.radio-wrapper label::before {
+  border-radius: 50%;
+}
+
+.radio-wrapper label::after {
+  content: "";
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #024e76;
+  position: absolute;
+  left: -29px;
+  top: -3px;
+}
+
+.checkbox-wrapper label::after {
+  content: "";
+  height: 6px;
+  width: 14px;
+  border-left: 2px solid #024e76;
+  border-bottom: 2px solid #024e76;
+  position: absolute;
+  left: -26px;
+  top: 1px;
+  transform: rotate(-58deg);
+  background-image: radial-gradient(circle, #39a6b2, #024e76);
+}
+
+.checkbox-wrapper input:checked, .radio-wrapper input:checked {
+  opacity: 1;
+}
+
+.checkbox-wrapper input + label::after, 
+.radio-wrapper input + label::after {
+  content: none;
+}
+
+.checkbox-wrapper input:checked + label::after, 
+.radio-wrapper input:checked + label::after {
+  content: "";
+}
+
         </style>
         
         <section class="hero">
@@ -721,16 +792,22 @@ header nav ul li a:hover {
         <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input"/>
         <p>
             Have you worked out with a trainer before?
+          <span class="radio-wrapper">
             <input type="radio" name="trainer-confirm" id="trainer-yes" />
             <label for="trainer-yes">Yes</label>
+          </span>
+          <span class="radio-wrapper">
             <input type="radio" name="trainer-confirm" id="trainer-no" />
             <label for="trainer-no">No</label>
+          </span>
           </p>
           <p>
+            <span class="checkbox-wrapper">
+              <input type="checkbox" name="age-confirm" id="checkbox" />
             <label for="checkbox" >
               I acknowledge that I am at least 18 years of age.
             </label>
-            <input type="checkbox" name="age-confirm" id="checkbox" />
+          </span>
           </p>
           <button type="submit">
             Get running!
