--- a/index.html
+++ b/index.html
@@ -320,9 +320,57 @@ section {
   color: #fce138;
   flex: 1;
 }
-.trainer img {
-  width: 100%;
+
+.trainer-1 {
+  background-image: url("./assets/images/trainer-1.jpg");
 }
+
+.trainer-img {
+  width: 100%;
+  min-height: 300px;
+  display: flex;
+  padding: 15px;
+  align-items: flex-end;
+}
+
+.trainer-img::after {
+  content: "";
+  height: 100%;
+  width: 100%;
+  background: rgba(252, 225, 56, 0.3);
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.trainer-img input, .trainer-1 input {
+  opacity: 0;
+}
+
+.trainer-img label, .trainer-1 label {
+  position: relative;
+  left:10px;
+  margin:10px;
+  line-height: 1.6;
+}
+
+.trainer-img label::before, .trainer-1 label::before {   content: "";
+    height: 20px;
+    width: 20px;
+    background: rgba(255, 255, 255, 0.75);  
+    border: 1px solid #024e76;  
+    position: absolute;
+    top: -4px;
+    left: -30px;}
+
+.trainer-1 label::after {  content: "";
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #024e76;
+  position: absolute;
+  left: -29px;
+  top: -3px;}
 
 .trainer-bio {
   padding: 25px;
@@ -914,14 +962,16 @@ header nav ul li a:hover {
 
 <div class="trainers">
   <article class="trainer">
-    <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+    <div class="trainer-1" class="trainer-img">
+      <div>
+        <h3>Arron Stephens</h3>
+        <h4>Speed / Strength</h4>
+      </div>
+    </div>
     <div class="trainer-bio">
-      <h3 class="trainer-name">Arron Stephens</h3>
-      <h4 class="trainer-role">Speed / Strength</h4>
       <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
-      </p>   
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+      </p>
     </div>
   </article>
   <!-- second trainer bio -->
